k3s-userapps/tekton/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://tekton.kirillorlov.pro"
    gethomepage.dev/group: "Infra"
    gethomepage.dev/name: Tekton
    gethomepage.dev/pod-selector: "app.kubernetes.io/part-of=tekton-pipelines"
    gethomepage.dev/icon: "https://tekton.dev/favicons/apple-touch-icon.png"
  name: tekton
  namespace: tekton-pipelines
spec:
  rules:
  - host: tekton.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tekton.kirillorlov.pro
    secretName: tekton-tls
